<resources>
    <string name="app_name">Домашняя библиотека</string>
    <string name="loading">Загрузка...</string>
    <string name="loading_db_fail">Ошибка при подключении к серверу</string>
    <string name="login_text">Авторизация</string>
    <string name="login_test_account">📇 Тестовый аккаунт</string>
    <string name="login_login">Логин</string>
    <string name="login_password">Пароль</string>
    <string name="login_authorize">Войти</string>
    <string name="login_empty">Логин или пароль не могут быть пустыми</string>
    <string name="login_signup">Нет учётной записи? Зарегистрируйтесь!</string>
    <string name="login_password_repeat">Повторите пароль</string>
    <string name="login_signup_register">Зарегистрироваться</string>
    <string name="login_signup_eula_d">Согласитесь с условиями</string>
    <string name="login_signup_eula">Согласен с условиями соглашения</string>
    <string name="login_signup_compare">Пароли не совпадают</string>
    <string name="login_signup_max_l">Максимум символов: </string>
    <string name="login_signup_enter_login">Введите логин</string>
    <string name="login_signup_enter_pwd">Введите пароль</string>
    <string name="login_signup_enter_pwd_r">Повторите пароль</string>
    <string name="error">Произошла какая-то ошибка</string>
    <string name="login_signup_wrong_pwd">Неверный логин/пароль</string>
    <string name="login_signup_login_conflict">Пользователем с таким логином уже есть</string>
    <string name="login_signup_created">Пользователем создан</string>
    <string name="app_nav_bottom_book_list">Каталог</string>
    <string name="app_nav_bottom_book_reading">Предпросмотр</string>
    <string name="app_nav_bottom_book_settings">Настройки</string>
    <string name="app_nav_search">Поиск</string>
    <string name="app_book_favorite">В избранное</string>
    <string name="app_book_read">Предпросмотр</string>
    <string name="app_book_favorite_active">Убрать из избранных</string>
    <string name="app_book_edit">Редактировать</string>
    <string name="app_settings_user">Пользователь</string>
    <string name="app_settings_keep_login">Автоматическая авторизация</string>
    <string name="app_settings_logout">Выйти из аккаунта</string>
    <string name="app_settings_help">Справка</string>
    <string name="app_catalog_create_book">Добавить книгу</string>
    <string name="app_catalog_favorite_only">Отображать только избранное</string>
    <string name="app_book_edit_title">Заголовок</string>
    <string name="app_book_edit_author">Автор</string>
    <string name="app_book_edit_image">Изображение</string>
    <string name="app_book_edit_description">Описание</string>
    <string name="app_book_edit_content">Содержание</string>
    <string name="app_book_edit_save">Сохранить</string>
    <string name="app_book_edit_delete">Удалить</string>
    <string name="app_book_edit_fill_all">Необходимо заполнить все поля</string>
    <string name="app_book_edit_created_info">Книга добавлена</string>
    <string name="app_book_edit_deleted_info">Книга удалена</string>
    <string name="app_book_edit_updated_info">Книга обновлена</string>
    <string name="app_book_reading_select">Выберите книгу в каталоге для предпросмотра</string>
</resources>