<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:theme="@style/Base.Theme.HomeLibrary"
    tools:context=".activity.AuthorizationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login" />

        <Button
            android:id="@+id/button"
            style="@style/Base.Theme.HomeLibrary.AuthorizationButton"
            android:layout_width="match_parent"
            android:text="@string/login_guest_account" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="20dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login"
                style="@style/Base.Theme.HomeLibrary.AuthorizationField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person_fill0_wght400_grad0_opsz24"
                android:drawableTint="#AAAAAA"
                android:autofillHints="username"
                android:hint="@string/login_login" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/Base.Theme.HomeLibrary.AuthorizationField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock_fill0_wght400_grad0_opsz24"
                android:drawableTint="#AAAAAA"
                android:hint="@string/login_password"
                android:inputType="text|textPassword"
                android:autofillHints="password"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="20dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/loginButton"
            style="@style/Base.Theme.HomeLibrary.AuthorizationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_authorize" />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_signup" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>